feat: implement repair orders, technician portal, and diagnostic management modules